test/invalid/new.js
function Constr(x) { this.bla = x; }
var constr = new Constr(2);
var x = constr.bla;
x = 'a';
return x;
